2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE: Updated for Foomatic 4.0.

	* TODO: Removed. We maintain it only in foomatic-db-engine.

	* debian/: Removed. The Debian package maintainer does not maintain
          the debian directory in this BZR repository.

2008-12-18  Bin Li <bin.li@ricoh-tech.com>

	* PPD/, printer/: Added 34 Postscript and 24 pxlmono PPD files for 34
	  Ricoh Family Group models.
	* driver/Postscript.xml, driver/pxlmono.xml, driver/pxlcolor.xml:
	  Deleted printer IDs for Ricoh models.

2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lbp800.xml, printer/Canon-LBP-800.xml: Added "lbp880"
	  driver and updated rating and text for the Canon LBP-800.

	* driver/splix2.xml: Updated SVN revision number in the release
	  note to 254.

2008-11-29  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to the current stable release 5.2.2
	  of Gutenprint.

	* driver/splix2.xml: Added note about bug fixes in the currently
	  downloadable driver packages. Updated list of supported
	  printers.

2008-11-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/laserjet.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/pxl1010.xml, driver/pxlcolor.xml,
	  driver/pxlmono.xml: Added links to Ghostscript patches which
	  fix the broken input tray selection functionality.

2008-11-25  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1100.xml, printer/HP-LaserJet_1100A.xml,
	  printer/HP-LaserJet_4L.xml, printer/HP-LaserJet_5L.xml,
	  printer/Samsung-ML-1750.xml: Updated text and recommended
	  driver.

	* opt/PJL-Duplex.xml: Made this option not being used for the
	  "ljet3d" driver. This driver controls Duplex via the standard
	  Ghostscript/PostScript method.

	* driver/cdj1600.xml, driver/cdj670.xml, driver/cdj850.xml,
	  driver/cdj880.xml, driver/cdj890.xml, driver/cdj970.xml,