@@ -493,6 +493,9 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       </comments>
     </printer>
     <printer>
+      <id>printer/Oce-fx2080</id>
+    </printer>
+    <printer>
       <id>printer/Oce-sx1480</id>
     </printer>
     <printer>
@@ -637,6 +640,15 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
     </printer>
     <printer>
       <id>printer/Samsung-ML-6060S</id>
+    </printer>
+    <printer>
+      <id>printer/Samsung-ML-7000</id>
+    </printer>
+    <printer>
+      <id>printer/Samsung-ML-7000N</id>
+    </printer>
+    <printer>
+      <id>printer/Samsung-ML-7000P</id>
     </printer>
     <printer>
       <id>printer/Samsung-ML-7050</id>
