@@ -11,13 +11,13 @@
     </resolution>
     <consumables>
       <comments>
-        <en>ML+7000D8/XAR @ tigerdirec.com</en>
+        <en>ML+7000D8/XAR</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
   <url>http://www.samsungtelecom.com</url>
   <lang>
-    <pcl level="5"/>
+    <pcl level="6"/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
