@@ -1,3 +1,13 @@
+2009-01-09  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* db/source/driver/pxlmono.xml: Added some printers for which the
+	  "pxlmono" driver was recommended but which ere not in the printer
+	  list of this driver (bug #291).
+
+	* printer/Samsung-ML-7000.xml, printer/Samsung-ML-7000N.xml,
+	  printer/Samsung-ML-7000P.xml: Fixed PCL language level and
+	  consumables entries.
+
 2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* README, USAGE: Updated for Foomatic 4.0.
